# gamma-world

./: .gitignore  AGENTS-uvprojects.md  AGENTS.md  Attributes.json  Creatures.json  DOCUMENTATION.md  Mental-Mutations.json  Physical-Mutations.json  Plant-Mutations.json  README.md  ai_services.py  backstory.md  config.py  core.py  create-character.md  creature-browser-plan.md  creatures-img-gen.py  main.py  models.py  pyproject.toml  requirements.txt  utils.py
characters/: big-b-1746116888-b518e2.json  crazy-pete-1746113994-726589.json  felix-1746714338-13e412.json  index.json  owen-1746120214-90abc0.json  radiated-roger-1746714420-1b8da3.json  sneaky-steve-1746714551-2f3987.json  wasteland-joey-1746711399-a367b6.json  wiggles-1753368215-3d82d9.json
templates/: charbrowse.html  chargen.html  creaturebrowse.html  menu.html
