[project]
name = "gamma-world"
version = "0.4.0"
description = "Gamma World (1e) character generator and browser (FastAPI)."
requires-python = ">=3.12"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "jinja2",
  "python-slugify",
  "pillow",
  "google-genai",
  "python-dotenv",
  "termcolor",
]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
  "characters",
  "images",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
